src/lexer/tests/snapshots/for.snap
---
source: src/lexer/mod.rs
assertion_line: 455
expression: "(input, Lexer::new(input).scan())"
---
- "for let x = 1; x < 10; 1 {\n    print(x)\n}"
- Ok:
    - tt: For
      line: 1
      column: 1
    - tt: Let
      line: 1
      column: 5
    - tt:
        Ident: x
      line: 1
      column: 9
    - tt:
        Op: Assign
      line: 1
      column: 11
    - tt:
        Num: "1"
      line: 1
      column: 13
    - tt:
        Semicolon: false
      line: 1
      column: 14
    - tt:
        Ident: x
      line: 1
      column: 16
    - tt:
        Op: Lt
      line: 1
      column: 18
    - tt:
        Num: "10"
      line: 1
      column: 20
    - tt:
        Semicolon: false
      line: 1
      column: 22
    - tt:
        Num: "1"
      line: 1
      column: 24
    - tt: OpenBrace
      line: 1
      column: 26
    - tt:
        Ident: print
      line: 2
      column: 5
    - tt: OpenParen
      line: 2
      column: 10
    - tt:
        Ident: x
      line: 2
      column: 11
    - tt: CloseParen
      line: 2
      column: 12
    - tt:
        Semicolon: true
      line: 2
      column: 13
    - tt: CloseBrace
      line: 3
      column: 1
    - tt:
        Semicolon: true
      line: 3
      column: 2

