src/lexer/tests/snapshots/let-12.snap
---
source: src/lexer/mod.rs
assertion_line: 487
expression: "(input, Lexer::new(input).scan())"
---
- "let e: char = '\n'"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: e
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Char
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 13
    - tt:
        Char: "\n"
      line: 1
      column: 15
    - tt:
        Semicolon: true
      line: 1
      column: 16

