src/lexer/tests/snapshots/let-3.snap
---
source: src/lexer/mod.rs
assertion_line: 487
expression: "(input, Lexer::new(input).scan())"
---
- "let b: int64 = 3"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: b
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Int64
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 14
    - tt:
        Num: "3"
      line: 1
      column: 16
    - tt:
        Semicolon: true
      line: 1
      column: 17

