src/lexer/tests/snapshots/let-7.snap
---
source: src/lexer/mod.rs
assertion_line: 487
expression: "(input, Lexer::new(input).scan())"
---
- "let c: float = 7.0"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: c
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Float
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 14
    - tt:
        Num: "7.0"
      line: 1
      column: 16
    - tt:
        Semicolon: true
      line: 1
      column: 17

