src/lexer/tests/snapshots/let-8.snap
---
source: src/lexer/mod.rs
assertion_line: 487
expression: "(input, Lexer::new(input).scan())"
---
- "let c: double = 8.0"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: c
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Double
      line: 1
      column: 8
    - tt:
        Op: Assign
      line: 1
      column: 15
    - tt:
        Num: "8.0"
      line: 1
      column: 17
    - tt:
        Semicolon: true
      line: 1
      column: 18

